--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,1 +1,23 @@
+.sidebar__nav {
+  width: 100vw;
+  max-width: 200px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 10px 30px;
+  font-size: 20px;
+  font-weight: 500;
+}
 
+.sidebar__nav > ul > li {
+  margin-bottom: 40px;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  background-color: #aca9a924;
+}
